--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,21 @@
+<app-global-error></app-global-error>
 <div class="max-w-2xl container mx-auto pt-5">
   <h1 class="font-bold text-center mb-2 text-lg">{{ title | titlecase }}</h1>
-
-  <!-- <app-product [product]="products[0]"> </app-product>
-  <app-product [product]="products[1]"> </app-product> -->
-  <app-product
-    *ngFor="let product of products; let i = index"
-    [product]="product"
-  ></app-product>
+  <input
+    [(ngModel)]="term"
+    class="mb-2 border py-2 px-4 w-full"
+    placeholder="filter products..."
+  />
+  <h2 *ngIf="loading" class="font-bold text-center mb-2 text-lg">
+    {{ loadText | uppercase }}
+  </h2>
+  <div *ngIf="products$ | async as products">
+    <app-product
+      *ngFor="let product of products | filterProducts : term; let i = index"
+      [product]="product"
+    ></app-product>
+    <app-modal title="Create N ew Product">
+      <app-create-product></app-create-product>
+    </app-modal>
+  </div>
 </div>
