--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -3,7 +3,7 @@
   <h2 class="mb-2 text-center text-lg">{{ product.title }}</h2>
   <p>
     Price:
-    <span class="font-bold">{{ product.price | currency : "RUB " }}</span>
+    <span class="font-bold">{{ product.price | currency : "$" }}</span>
   </p>
   <button
     class="border py-2 px-4 rounded"
@@ -23,7 +23,7 @@
         [ngStyle]="{
           fontWeight: 'bold'
         }"
-        >{{ product.rating.rate | number : "1.2-4" }}</span
+        >{{ product.rating?.rate | number : "1.2-4" }}</span
       >
     </p>
   </div>
