--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -9,13 +9,10 @@
 </h2>
 <div *ngIf="productService.products">
   <app-product
-    *ngFor="let product of productService.products"
+    *ngFor="let product of filterProducts(productService.products, term)"
     [product]="product"
   ></app-product>
-  <app-modal
-    *ngIf="modalService.isVisible$ | async"
-    title="Create N ew Product"
-  >
+  <app-modal *ngIf="modalService.isVisible$ | async" title="Create New Product">
     <app-create-product></app-create-product>
   </app-modal>
 </div>
