--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -9,7 +9,7 @@
 </h2>
 <div *ngIf="productService.products">
   <app-product
-    *ngFor="let product of filterProducts(productService.products, term)"
+    *ngFor="let product of products | filterProducts : term"
     [product]="product"
   ></app-product>
   <app-modal *ngIf="modalService.isVisible$ | async" title="Create New Product">
@@ -17,8 +17,8 @@
   </app-modal>
 </div>
 <button
-  class="rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4 font-bold text-xl"
+  class="rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4 font-bold"
   (click)="modalService.open()"
 >
-  +
+  Add new product
 </button>
